--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;   
+    height: 100vh;
 }
 
 body * {
@@ -136,7 +137,7 @@ ul li a:hover {
     align-items: center;
     justify-content: center;
     padding: 16px;
-    trasition: background 0.5s;
+    transition: background 0.5s;
     border-radius: 50%;
 }
 
@@ -150,4 +151,13 @@ footer {
     justify-content: center;
     padding: 24px 0;
     font-size: 14px;
+}
+
+@media (min-width: 700px){
+    :root {
+        --bg-url: url(./assets/bg-desktop.jpg);
+    }
+    .light {
+        --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
 }
