--- a/style.css
+++ b/style.css
@@ -77,12 +77,17 @@ body * {
     top: 50%;
     left: 0;
     z-index: 1;
-    transform: translateY(-50%)
+    transform: translateY(-50%);
+    animation: slide-back 0.2s;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+  animation: slide-in 0.4s forwards;    
+}
+
+#switch button:hover {
+    cursor: pointer;
+    outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -159,5 +164,22 @@ footer {
     }
     .light {
         --bg-url: url(./assets/bg-desktop-light.jpg);
+    }
+}
+
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+    to {
+        left: 50%; 
+    }
+}
+@keyframes slide-back {
+    from {
+        left: 50%
+    }
+    to {
+        left: 0; 
     }
 }
